fix URL wrapping issue #5

--- a/themes/beautifulhugo/static/css/main.css
+++ b/themes/beautifulhugo/static/css/main.css
@@ -16,6 +16,7 @@ p {
 p a {
   /* text-decoration: underline */
   color: #008AFF;
+  word-break: break-all;
 }
 h1,h2,h3,h4,h5,h6 {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
